test/runtime/fail/runtime/index_nil.hy

// expect error: Attempt to index nil

let a = nil
let b = a.hello
